Angular: Fix about spacing

--- a/angular-website/website/src/app/components/about/about.component.css
+++ b/angular-website/website/src/app/components/about/about.component.css
@@ -1,6 +1,4 @@
 .about-page {
-    width: auto;
-    height: 150%;
     background: black;
 }
 
@@ -21,6 +19,7 @@
 }
 
 .flex {
+    background-color: black;
     display: flex;
     width: 100%;
     table-layout: fixed;
@@ -43,10 +42,7 @@
 .about-paragraph {
 
     vertical-align: top;
-    width: 100%;
-    max-width: 100%;
-    height: 500px;
-
+    margin-bottom: 15%;
     font-size: 20px;
     color: grey;
     letter-spacing: .5px;
@@ -85,12 +81,5 @@
         padding-top: 40px;
         padding-left: 40px;
         padding-right: 40px;
-    }
-}
-
-@media screen and (max-width: 600px) {
-
-    .about-page {
-        height: 1300px;
     }
 }
